--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -9,13 +9,14 @@
     "drop": "npx sequelize-cli db:drop",
     "seed": "npx sequelize-cli db:seed:all",
     "test": "mocha tests/**/*.js --exit",
-    "test:mocha": "nyc mocha --all --include models --include services --include controllers tests/**/*.js --exit",
+    "test:mocha": "nyc mocha --all --include models --include services --include controllers tests/unit/**/*.js --exit",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "keywords": [],
   "author": "Rafael Santos",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "8.2.0",
     "eslint-config-trybe-backend": "1.0.3",
@@ -34,8 +35,8 @@
     "jest": "26.0.1",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.15",
+    "nyc": "^15.1.0",
     "sequelize-cli": "^6.2.0",
-    "sinon": "^14.0.0",
-    "nyc": "^15.1.0"
+    "sinon": "^14.0.0"
   }
 }
