chore(Config Eslint): Feita alteração na configuração de ESlint

--- a/app/frontend/.eslintrc.json
+++ b/app/frontend/.eslintrc.json
@@ -1,25 +1,4 @@
 {
-  "env": {
-    "browser": true,
-    "es2020": true
-  },
-  "extends": ["trybe-frontend"],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "sourceType": "module"
-  },
-  "rules": {
-    "comma-dangle": [
-      "error",
-      {
-        "arrays": "never",
-        "objects": "always",
-        "imports": "never",
-        "exports": "never",
-        "functions": "always"
-      }
-    ]
-  }
+  "root": true,
+  "extends": ["trybe-frontend"]
 }
