--- a/app/frontend/.stylelintrc.json
+++ b/app/frontend/.stylelintrc.json
@@ -108,6 +108,7 @@
     "selector-max-empty-lines": 0,
     "selector-max-id": 5,
     "selector-max-pseudo-class": 3,
+    "selector-max-specificity": "0,5,0",
     "selector-max-type": 5,
     "selector-max-universal": 3,
     "selector-no-qualifying-type": true,
