--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -6,9 +6,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "conventional-commit-cli": "^1.1.2",
-    "eslint-config-trybe-frontend": "1.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -41,7 +41,9 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-sonarjs": "0.10.0",
+    "eslint-plugin-sonarjs": "^0.11.0",
+    "eslint": "7.11.0",
+    "eslint-config-trybe-frontend": "1.2.2",
     "jest": "26.6.0",
     "stylelint": "13.8.0",
     "stylelint-order": "4.1.0"
