--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.js",
   "scripts": {
     "restore": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate",
-    "start": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "drop": "npx sequelize-cli db:drop",
     "seed": "npx sequelize-cli db:seed:all",
     "test": "mocha tests/**/*.js --exit",
