--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.9'
+
 services:
   frontend:
     build: ./frontend
@@ -52,3 +53,7 @@ services:
       retries: 5
     cap_add:
       - SYS_NICE
+
+networks:
+  default:
+    name: ebytr_net
